Removed a potential formatting inconsistency

--- a/src/main/resources/colours.yml
+++ b/src/main/resources/colours.yml
@@ -22,7 +22,7 @@
 
 # ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 # ┃ ╭━━━━╮                                       [INFO]                                
-# ┃ ┃ i ┃       𝐓𝐨 𝐬𝐩𝐞𝐜𝐢𝐟𝐲 𝐚 𝐭𝐡𝐞𝐦𝐞 𝐯𝐢𝐚 𝐭𝐡𝐢𝐬 𝐟𝐢𝐥𝐞, 𝐰𝐞 𝐬𝐭𝐫𝐨𝐧𝐠𝐥𝐲 𝐫𝐞𝐜𝐨𝐦𝐦𝐞𝐧𝐝 𝐮𝐬𝐢𝐧𝐠 𝐨𝐮𝐫 𝐂𝐨𝐥𝐨𝐮𝐫𝐖𝐢𝐳𝐚𝐫𝐝 𝐆𝐔𝐈. 
+# ┃ ┃ i        𝐓𝐨 𝐬𝐩𝐞𝐜𝐢𝐟𝐲 𝐚 𝐭𝐡𝐞𝐦𝐞 𝐯𝐢𝐚 𝐭𝐡𝐢𝐬 𝐟𝐢𝐥𝐞, 𝐰𝐞 𝐬𝐭𝐫𝐨𝐧𝐠𝐥𝐲 𝐫𝐞𝐜𝐨𝐦𝐦𝐞𝐧𝐝 𝐮𝐬𝐢𝐧𝐠 𝐨𝐮𝐫 𝐂𝐨𝐥𝐨𝐮𝐫𝐖𝐢𝐳𝐚𝐫𝐝 𝐆𝐔𝐈. 
 # ┃ ╰━━━━╯        𝘊𝘰𝘭𝘰𝘶𝘳𝘞𝘪𝘻𝘢𝘳𝘥 𝘮𝘢𝘺 𝘣𝘦 𝘢𝘤𝘤𝘦𝘴𝘴𝘦𝘥 𝘶𝘴𝘪𝘯𝘨 𝘵𝘩𝘪𝘴 𝘭𝘪𝘯𝘬: https://colour.sgrewritten.org   
 # ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
 
