A refactor on sign colors
Currently does not take the type of the sign into consideration.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -161,17 +161,19 @@ chargeFreeDestination: true
 # |                                       Aesthetic Tweaks                                       | #
 # +----------------------------------------------------------------------------------------------+ #
 
-# What colour will StarGate use for all text when formatting gate signs?
-#
-# Please note that a more comprehensive theme customisation system is available via colours.yml.
-# For more information, please visit https://sgrewritten.org/l/colour_guide
-signStyle:
-  defaultForeground: BLACK
-  defaultBackground: WHITE
-  # [1: foreground, 2: gate type, 3: grey, 4: background]
-  pointer: 2
-  # [1: selected gates coloured, 2: all gates coloured, 3: no gates coloured]
-  listing: 1
+# These settings are used to customise the colors and styles used by SG when formatting signs.
+# For more advanced styling options, please use https://sgrewritten.org/l/extraColours
+signFormatting:
+    # The default text color on all stargate signs (brightness shifts based on sign material)
+    # A list of valid colors can be found at https://sgrewritten.org/l/colourTypes
+    color: BLACK
+    # SG highlights players' selected destinations with a pointer symbol as users scroll.
+    # How should SG style its pointer symbol? (https://sgrewritten.org/l/pointerStyles)
+    #  Options:
+    #    1: No styling (the pointer will be the same default colour used by the sign's text).
+    #    2: Destination type (the pointer will colour-code based on the selected destination)
+    #    3: Accented (pointer brightness will shift to contrast with the sign's default colour)
+    pointerBehaviour: 2
 
 # By default, SG allows users to specify coloured names for their gates via external plugins.
 # Such names override the colours specified for signStyle (above).
@@ -222,4 +224,4 @@ loggingLevel: INFO
 
 # An internal value used by the plugin to determine how old your config is.
 # Please do not change this.
-configVersion: 6
+configVersion: 7
