Made unittest to the implemented methods

--- a/src/main/resources/database/sqlite-queries.properties
+++ b/src/main/resources/database/sqlite-queries.properties
@@ -15,6 +15,8 @@ INSERT_PORTAL_POSITION=INSERT INTO {PortalPosition} (portalName, networkName, xC
 INSERT_INTER_PORTAL_POSITION=INSERT INTO {InterPortalPosition} (portalName, networkName, xCoordinate, yCoordinate, zCoordinate, positionType) VALUES (?, ?, ?, ?, ?, (SELECT {PositionType}.id FROM {PositionType} WHERE {PositionType}.positionName = ?));
 DELETE_PORTAL_POSITIONS=DELETE FROM {PortalPosition} WHERE portalName = ? AND networkName = ?;
 DELETE_INTER_PORTAL_POSITIONS=DELETE FROM {InterPortalPosition} WHERE portalName = ? AND networkName = ?;
+DELETE_PORTAL_POSITION=DELETE FROM {PortalPosition} WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
+DELETE_INTER_PORTAL_POSITION=DELETE FROM {InterPortalPosition} WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
 GET_PORTAL_POSITIONS=SELECT *, (SELECT {PositionType}.positionName FROM {PositionType} WHERE {PositionType}.id = positionType) as positionName FROM {PortalPosition} WHERE networkName = ? AND portalName = ?;
 GET_INTER_PORTAL_POSITIONS=SELECT *, (SELECT {PositionType}.positionName FROM {PositionType} WHERE {PositionType}.id = positionType) as positionName FROM {InterPortalPosition} WHERE networkName = ? AND portalName = ?;
 CREATE_TABLE_PORTAL_FLAG=CREATE TABLE IF NOT EXISTS {Flag} (id INTEGER PRIMARY KEY AUTOINCREMENT, `character` CHAR(1) UNIQUE NOT NULL);
@@ -27,8 +29,10 @@ CREATE_VIEW_INTER_PORTAL=CREATE VIEW IF NOT EXISTS {InterPortalView} AS SELECT {
 INSERT_PORTAL_FLAG=INSERT INTO {Flag} (`character`) VALUES (?);
 INSERT_PORTAL_FLAG_RELATION=INSERT INTO {PortalFlagRelation} (name, network, flag) VALUES (?, ?, (SELECT id FROM {Flag} WHERE `character` = ?));
 INSERT_INTER_PORTAL_FLAG_RELATION=INSERT INTO {InterPortalFlagRelation} (name, network, flag) VALUES (?, ?, (SELECT id FROM {Flag} WHERE `character` = ?));
-DELETE_PORTAL_FLAG_RELATION=DELETE FROM {PortalFlagRelation} WHERE name = ? AND network = ?;
-DELETE_INTER_PORTAL_FLAG_RELATION=DELETE FROM {InterPortalFlagRelation} WHERE name = ? AND network = ?;
+DELETE_PORTAL_FLAG_RELATIONS=DELETE FROM {PortalFlagRelation} WHERE name = ? AND network = ?;
+DELETE_PORTAL_FLAG_RELATION=DELETE FROM {PortalFlagRelation} WHERE name = ? AND network = ? AND flag = (SELECT id FROM {Flag} WHERE `character` = ?);
+DELETE_INTER_PORTAL_FLAG_RELATIONS=DELETE FROM {InterPortalFlagRelation} WHERE name = ? AND network = ?;
+DELETE_INTER_PORTAL_FLAG_RELATION=DELETE FROM {InterPortalFlagRelation} WHERE name = ? AND network = ? AND flag = (SELECT id FROM {Flag} WHERE `character` = ?);
 INSERT_PORTAL=INSERT INTO {Portal} (network, name, destination, world, x, y, z, ownerUUID, gateFileName, facing, flipZ) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
 INSERT_INTER_PORTAL=INSERT INTO {InterPortal} (network, name, destination, world, x, y, z, ownerUUID, gateFileName, facing, flipZ, homeServerId) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
 DELETE_PORTAL=DELETE FROM {Portal} WHERE name = ? AND network = ?;
