Implemented fetching and setting meta

--- a/src/main/resources/database/sqlite-queries.properties
+++ b/src/main/resources/database/sqlite-queries.properties
@@ -44,3 +44,9 @@ DELETE_INTER_PORTAL=DELETE FROM {InterPortal} WHERE name = ? AND network = ?;
 REPLACE_SERVER_INFO=REPLACE INTO {ServerInfo} (serverId, serverName) VALUES(?, ?);
 SHOW_INDEX_PORTAL_POSITION=SELECT * FROM sqlite_master WHERE type = 'index' AND name = '{PortalPositionIndex}';
 SHOW_INDEX_INTER_PORTAL_POSITION=SELECT * FROM sqlite_master WHERE type = 'index' AND name = '{InterPortalPositionIndex}';
+GET_PORTAL=SELECT * FROM {PortalView} WHERE name = ? AND network = ?;
+GET_INTER_PORTAL=SELECT * FROM {InterPortalView} WHERE name = ? AND network = ?;
+SET_PORTAL_META=UPDATE {Portal} SET metaData = ? WHERE name = ? AND network = ?;
+SET_INTER_PORTAL_META=UPDATE {InterPortal} SET metaData = ? WHERE name = ? AND network = ?;
+SET_PORTAL_POSITION_META=UPDATE {PortalPosition} SET metaData = ? WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
+SET_INTER_PORTAL_POSITION_META=UPDATE {InterPortalPosition} SET metaData = ? WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
