Final refactor of the database api

--- a/src/main/resources/database/sqlite-queries.properties
+++ b/src/main/resources/database/sqlite-queries.properties
@@ -50,3 +50,5 @@ SET_PORTAL_META=UPDATE {Portal} SET metaData = ? WHERE name = ? AND network = ?;
 SET_INTER_PORTAL_META=UPDATE {InterPortal} SET metaData = ? WHERE name = ? AND network = ?;
 SET_PORTAL_POSITION_META=UPDATE {PortalPosition} SET metaData = ? WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
 SET_INTER_PORTAL_POSITION_META=UPDATE {InterPortalPosition} SET metaData = ? WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
+GET_PORTAL_POSITION_META=SELECT * FROM {PortalPosition} WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
+GET_INTER_PORTAL_POSITION_META=SELECT * FROM {InterPortalPosition} WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
