--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>net.TheDgtl</groupId>
-    <artifactId>Stargate</artifactId>
+    <groupId>org.sgrewritten</groupId>
+    <artifactId>stargate</artifactId>
     <version>1.0.0.12-ALPHA</version>
     <name>StarGate</name>
     <description>Spigot plugin to create and manage networks of Stargates.</description>
