--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
 
     <repositories>
         <repository>
+            <id>gitea</id>
+            <url>https://git.knarcraft.net/api/packages/EpicKnarvik97/maven</url>
+        </repository>
+        <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
         </repository>
