--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Stargate
-main: org.sgrewritten.stargate.Stargate
+main: org.sgrewritten.stargate.FakeStargate
 version: @version@
 description: Stargate mod for Bukkit
 authors: [ Dinnerbone, Drakia, PseudoKnight, Thorin, Knarvik ]
