Implement changing names in the database
Includes unit tests (although they don't work at the moment)

--- a/src/main/resources/database/sqlite-queries.properties
+++ b/src/main/resources/database/sqlite-queries.properties
@@ -52,3 +52,7 @@ SET_PORTAL_POSITION_META=UPDATE {PortalPosition} SET metaData = ? WHERE portalNa
 SET_INTER_PORTAL_POSITION_META=UPDATE {InterPortalPosition} SET metaData = ? WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
 GET_PORTAL_POSITION_META=SELECT * FROM {PortalPosition} WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
 GET_INTER_PORTAL_POSITION_META=SELECT * FROM {InterPortalPosition} WHERE portalName = ? AND networkName = ? AND xCoordinate = ? AND yCoordinate = ? AND zCoordinate = ?;
+UPDATE_NETWORK_NAME=UPDATE {Portal} SET network = ? WHERE network = ?;
+UPDATE_INTER_NETWORK_NAME=UPDATE {InterPortal} SET network = ? WHERE network = ?;
+UPDATE_PORTAL_NAME=UPDATE {Portal} SET name = ? WHERE name = ? AND network = ?;
+UPDATE_INTER_PORTAL_NAME=UPDATE {InterPortal} SET name = ? WHERE name = ? AND network = ?;
