Fixes a possible issue with renaming

--- a/src/main/resources/database/sqlite-queries.properties
+++ b/src/main/resources/database/sqlite-queries.properties
@@ -56,3 +56,5 @@ UPDATE_NETWORK_NAME=UPDATE {Portal} SET network = ? WHERE network = ?;
 UPDATE_INTER_NETWORK_NAME=UPDATE {InterPortal} SET network = ? WHERE network = ?;
 UPDATE_PORTAL_NAME=UPDATE {Portal} SET name = ? WHERE name = ? AND network = ?;
 UPDATE_INTER_PORTAL_NAME=UPDATE {InterPortal} SET name = ? WHERE name = ? AND network = ?;
+GET_ALL_PORTALS_OF_NETWORK=SELECT * FROM {PortalView} WHERE network = ?;
+GET_ALL_INTER_PORTALS_OF_NETWORK=SELECT * FROM {InterPortalView} WHERE network = ?;
