--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,18 @@
             <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
+	<dependency>
+  		<groupId>org.apache.maven.plugins</groupId>
+  		<artifactId>maven-surefire-plugin</artifactId>
+  		<version>3.0.0-M7</version>
+  		<type>maven-plugin</type>
+	</dependency>
+	<dependency>
+    		<groupId>org.junit.jupiter</groupId>
+    		<artifactId>junit-jupiter</artifactId>
+    		<version>5.9.1</version>
+    		<scope>test</scope>
+	</dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
