Remove the protect entrance setting
As of issue #249

--- a/src/main/resources/migration/config-migrations-1_0_0.properties
+++ b/src/main/resources/migration/config-migrations-1_0_0.properties
@@ -37,6 +37,7 @@ gate-folder=
 debug=
 permdebug=
 destMemory=rememberLastDestination
+protectEntrance=
 sortLists=
 #PseudoKnight
 verifyPortals=checkPortalValidity
@@ -57,7 +58,7 @@ gates.cosmetic.mainSignColor=signStyle.defaultForeground
 gates.cosmetic.highlightSignColor=signStyle.defaultBackground
 gates.integrity.destroyedByExplosion=destroyOnExplosion
 gates.integrity.verifyPortals=checkPortalValidity
-gates.integrity.protectEntrance=protectEntrance
+gates.integrity.protectEntrance=
 gates.functionality.enableBungee=bungee.usingBungee
 gates.functionality.handleVehicles=handleVehicles
 gates.functionality.handleEmptyVehicles=
