--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
     </properties>
 
     <repositories>
+		<repository>
+			<id>playpro-repo</id>
+			<url>https://maven.playpro.com</url>
+		</repository>
         <repository>
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
@@ -28,6 +32,7 @@
             <id>papermc</id>
             <url>https://repo.papermc.io/repository/maven-public/</url>
         </repository>
+        
     </repositories>
 
     <dependencies>
@@ -101,6 +106,12 @@
             <groupId>com.github.cryptomorin</groupId>
             <artifactId>XSeries</artifactId>
             <version>8.6.1</version>
+        </dependency>
+        <dependency>
+        	<groupId>net.coreprotect</groupId>
+        	<artifactId>coreprotect</artifactId>
+        	<version>21.0</version>
+        	<scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
