--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -34,3 +34,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=stargate-rewritten_Stargate-Bukkit
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_DATABASE: stargate
+          MYSQL_ROOT_PASSWORD: root
+        ports:
+          - 33306:3306
