--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Change mysql sql_mode
         run: >
-         docker exec mysqlservice mysql -u root -e "SET GLOBAL sql_mode = '';"
+         docker exec mysqlservice mysql -u root -proot -e "SET GLOBAL sql_mode = '';"
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
