Removes unimplemented options
Will be part of the dynmap addon instead

--- a/src/main/resources/migration/config-migrations-1_0_0.properties
+++ b/src/main/resources/migration/config-migrations-1_0_0.properties
@@ -79,5 +79,7 @@ economy.freeGatesColor=
 economy.freeGatesColored=signStyle.listing
 debugging.permissionDebug=
 debugging.debug=
+dynmap.dynmapIconsHiddenByDefault=
+dynmap.enableDynmap=
 #cybertiger
 enableEconomy=useEconomy
