--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
         	<version>21.0</version>
         	<scope>provided</scope>
         </dependency>
+        <dependency>
+	         <groupId>org.apache.tika</groupId>
+	         <artifactId>tika-parsers</artifactId>
+	         <version>1.2</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>Stargate-${project.version}</finalName>
@@ -138,6 +143,7 @@
                             <include>com.zaxxer:HikariCP</include>
                             <include>com.github.cryptomorin:XSeries</include>
                             <include>org.slf4j:slf4j-api</include>
+                            <include>org.apache.tika:tika-parsers</include>
                         </includes>
                     </artifactSet>
                     <relocations>
@@ -170,6 +176,12 @@
                                 <exclude>com/cryptomorin/xseries/Skull*</exclude>
                             </excludes>
                         </filter>
+                        <filter>
+							<artifact>org.apache.tika:tika-parsers</artifact>
+							<includes>
+								<include>org/apache/tika/parser/txt/*</include>
+							</includes>
+						</filter>
                     </filters>
                 </configuration>
                 <executions>
