Fixes formatting the interserverconflict message

--- a/src/main/resources/colors/signTextSaturationBrightness.properties
+++ b/src/main/resources/colors/signTextSaturationBrightness.properties
@@ -1,4 +1,4 @@
-# [[textSaturation,textBrightness],[highligtSaturation,highligtBrightness]]
+# [[textSaturation,textBrightness],[highlightSaturation,highlightBrightness]]
 OAK_WALL_SIGN=[[100,100],[100,60]]
 SPRUCE_WALL_SIGN=[[65,100],[30,80]]
 BIRCH_WALL_SIGN=[[100,16],[100,40]]
