--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ version: '${project.version}'
 description: Stargate mod for Bukkit Revived
 author: EpicKnarvik97
 authors: [ Drakia, PseudoKnight, EpicKnarvik97 ]
-website: https://git.knarcraft.net/EpicKnarvik97/Stargate
+website: https://github.com/stargate-rewritten/Stargate-Bukkit/tree/temp-legacy
 api-version: 1.16
 softdepend: [ Vault, dynmap ]
 commands:
